--- a/web/src/main/webapp/css/body.css
+++ b/web/src/main/webapp/css/body.css
@@ -1,7 +1,7 @@
-html,
-body {
+html, body {
     height: 100%;
 }
+
 body {
     margin: 0;
     background: linear-gradient(45deg, #49a09d, #5f2c82);
