--- a/web/src/main/webapp/css/table.css
+++ b/web/src/main/webapp/css/table.css
@@ -2,33 +2,38 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
 table {
     width: 200px;
     border-collapse: collapse;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
-th,
-td {
+
+th, td {
     padding: 15px;
     background-color: rgba(255, 255, 255, 0.2);
     color: #fff;
 }
+
 th {
     text-align: left;
 }
+
 thead th {
     background-color: #55608f;
 }
+
 tbody tr:hover {
     background-color: rgba(255, 255, 255, 0.3);
 }
+
 tbody td {
     position: relative;
 }
+
 tbody td:hover:before {
     content: "";
     position: absolute;
@@ -38,4 +43,13 @@ tbody td:hover:before {
     bottom: -9999px;
     background-color: rgba(255, 255, 255, 0.2);
     z-index: -1;
+}
+
+table a {
+    color: white;
+    text-decoration: none;
+}
+
+table a:hover {
+    color: #7639a4;
 }
